# Jimmy

./: .replit  Makefile  manage.py  pyproject.toml  requirements.txt
jimmy/: questions.json  schema.py  settings.py  urls.py  wsgi.py
kinnon/: apps.py  models.py  schema.py  util.py
kinnon/migrations/: 0001_initial.py
